--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,16 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #151515;
+  --foreground: #ffffff;
+}
+
+@font-face {
+  font-family: Futurist;
+  font-style: normal;
+  font-weight: 200 700;
+  font-display: swap;
+  src: url("./../../public/fonts/futrfw.ttf") format("truetype");
 }
 
 @theme inline {
@@ -10,6 +18,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-title: "Futurist", "sans-serif";
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,6 +27,7 @@
     --foreground: #ededed;
   }
 }
+
 
 body {
   background: var(--background);
