--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,25 @@
 :root {
   --background: #151515;
   --foreground: #ffffff;
+  --primary: #627e9cff;
+  --secondary: #a6c3e3ff;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(50, 50, 50, 0.8); /* Dark thumb */
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(20, 20, 20, 0.8); /* Dark track */
+}
+
+html {
+  scroll-behavior: smooth !important;
 }
 
 @font-face {
@@ -16,6 +35,10 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
+
+
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-title: "Futurist", "sans-serif";
@@ -33,4 +56,5 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  
 }
