--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,9 @@
 @import "tailwindcss";
 
+
 :root {
-  --background: #151515;
-  --foreground: #ffffff;
+  --background: #ffffff;
+  --foreground: #151515;
   --primary: #5a819fff;
   --secondary: #a6c3e3ff;
 }
@@ -63,6 +64,7 @@ html {
     --foreground: #ededed;
   }
 }
+
 
 
 body {
