--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,75 +1,97 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 :root {
-  --background: #ffffff;
-  --foreground: #151515;
-  --primary: #5a819fff;
-  --secondary: #a6c3e3ff;
+	--background: #ffffff;
+	--foreground: #151515;
+	--primary: #5a819fff;
+	--secondary: #a6c3e3ff;
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+	width: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(50, 50, 50, 0.8); /* Dark thumb */
-  border-radius: 10px;
+	background-color: rgba(50, 50, 50, 0.8); /* Dark thumb */
+	border-radius: 10px;
 }
 
 ::-webkit-scrollbar-track {
-  background: rgba(20, 20, 20, 0.8); /* Dark track */
+	background: rgba(20, 20, 20, 0.8); /* Dark track */
 }
 
 html {
-  scroll-behavior: smooth !important;
+	scroll-behavior: smooth !important;
 }
 
-@keyframes scrollLeft {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
+@keyframes scroll-left {
+	from {
+		background-position: 0 0;
+	}
+	to {
+		background-position: -2000px 0;
+	}
 }
 
-.animate-scrollLeft {
-  animation: scrollLeft 10s linear infinite;
+@keyframes scroll-right {
+	from {
+		background-position: 0 0;
+	}
+	to {
+		background-position: 2000px 0;
+	}
+}
+.scroll-left-bg {
+	background-image: url("/hero_bg.png");
+	background-repeat: repeat-x;
+	animation: scroll-left 100s linear infinite;
+	position: relative;
+	z-index: -2;
+	width: 100%;
+	height: 705px;
+}
+
+.scroll-right-stars {
+	background-image: url("/hero_stars.svg");
+	background-repeat: repeat-x;
+	animation: scroll-right 100s linear infinite;
+	position: fixed;
+	top: 0;
+	z-index: -1;
+	width: 100%;
+	height: 705px;
 }
 
 @font-face {
-  font-family: Futurist;
-  font-style: normal;
-  font-weight: 200 700;
-  font-display: swap;
-  src: url("./../../public/fonts/futrfw.ttf") format("truetype");
+	font-family: Futurist;
+	font-style: normal;
+	font-weight: 200 700;
+	font-display: swap;
+	src: url("./../../public/fonts/futrfw.ttf") format("truetype");
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --color-primary: var(--primary);
-  --color-secondary: var(--secondary);
+	--color-background: var(--background);
+	--color-foreground: var(--foreground);
+	--color-primary: var(--primary);
+	--color-secondary: var(--secondary);
 
-
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-  --font-title: "Futurist", "sans-serif";
+	--font-sans: var(--font-geist-sans);
+	--font-mono: var(--font-geist-mono);
+	--font-title: "Futurist", "sans-serif";
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: #0a0a0a;
+		--foreground: #ededed;
+	}
 }
 
-
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-  
+	background: var(--background);
+	color: var(--foreground);
+	font-family: Arial, Helvetica, sans-serif;
 }
