--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,9 @@
 @import "tailwindcss";
 
-@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 :root {
 	--background: #ffffff;
-	--foreground: #151515;
+	--foreground: #1c1b22;
 	--primary: #5a819fff;
 	--secondary: #a6c3e3ff;
 }
@@ -83,15 +82,16 @@ html {
 	--font-title: "Futurist", "sans-serif";
 }
 
-@media (prefers-color-scheme: dark) {
-	:root {
-		--background: #0a0a0a;
-		--foreground: #ededed;
-	}
+[data-theme="dark"] {
+
+	--background: var(--foreground);
+
+
 }
 
+
 body {
-	background: var(--background);
-	color: var(--foreground);
+	/* background: var(--background);*/
+	color: var(--text-color); 
 	font-family: Arial, Helvetica, sans-serif;
 }
