--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
 
 :root {
 	--background: #ffffff;
@@ -7,6 +8,25 @@
 	--primary: #5a819fff;
 	--secondary: #a6c3e3ff;
 }
+
+
+@theme inline {
+	--color-background: var(--background);
+	--color-foreground: var(--foreground);
+	--color-primary: var(--primary);
+	--color-secondary: var(--secondary);
+
+	--font-sans: var(--font-geist-sans);
+	--font-mono: var(--font-geist-mono);
+	--font-title: "Futurist", "sans-serif";
+}
+
+body {
+	/* background: var(--background);*/
+	color: var(--text-color); 
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 
 ::-webkit-scrollbar {
 	width: 8px;
@@ -62,36 +82,10 @@ html {
 	width: 100%;
 	height: 705px;
 }
-
 @font-face {
 	font-family: Futurist;
 	font-style: normal;
 	font-weight: 200 700;
 	font-display: swap;
 	src: url("./../../public/fonts/futrfw.ttf") format("truetype");
-}
-
-@theme inline {
-	--color-background: var(--background);
-	--color-foreground: var(--foreground);
-	--color-primary: var(--primary);
-	--color-secondary: var(--secondary);
-
-	--font-sans: var(--font-geist-sans);
-	--font-mono: var(--font-geist-mono);
-	--font-title: "Futurist", "sans-serif";
-}
-
-[data-theme="dark"] {
-
-	--background: var(--foreground);
-
-
-}
-
-
-body {
-	/* background: var(--background);*/
-	color: var(--text-color); 
-	font-family: Arial, Helvetica, sans-serif;
 }
